tests/snapshots/strict__every_refusal_strict_adds.snap
---
source: tests/strict.rs
expression: "ricepilot::cli::render::refusal_list(&refusals)"
---
  [R4] /home/u/.local/state/ricepilot/manifests/caelestia.toml: profile `caelestia` is not what ricepilot last recorded of it; 2 path(s) differ outside `volatile` (changed hypr/conf.d/01.conf; changed hypr/conf.d/02.conf). --strict switches only to a profile that is. review it with `ricepilot verify caelestia`, then switch without --strict to take it as it is.
  [R4] /home/u/.local/state/ricepilot/manifests/caelestia.toml: profile `caelestia` is not what ricepilot last recorded of it; 7 path(s) differ outside `volatile` (changed hypr/conf.d/01.conf; changed hypr/conf.d/02.conf; changed hypr/conf.d/03.conf; changed hypr/conf.d/04.conf; changed hypr/conf.d/05.conf; … and 2 more). --strict switches only to a profile that is. review it with `ricepilot verify caelestia`, then switch without --strict to take it as it is.
  [R4] /home/u/.local/state/ricepilot/manifests/caelestia.toml: profile `caelestia` could not be compared with what ricepilot recorded (nothing has been recorded for it yet), and --strict does not switch to a profile it could not compare. a manifest is recorded each time ricepilot switches to a profile or captures one; switch without --strict once to record it.
  [R4] /home/u/.local/state/ricepilot/manifests/caelestia.toml: profile `caelestia` could not be compared with what ricepilot recorded (the recorded manifest could not be read: <why>), and --strict does not switch to a profile it could not compare. a manifest is recorded each time ricepilot switches to a profile or captures one; switch without --strict once to record it.
  [R4] /home/u/.local/share/caelestia/hypr/hyprland.conf: was NOT checked by the sandboxed verify-config (`Hyprland` is not installed in /usr/bin, /usr/local/bin), and --strict switches only to a Hyprland config that was. drop --strict to switch to it anyway.
  [R4] /home/u/.local/share/caelestia/hypr/hyprland.lua: was NOT checked by the sandboxed verify-config (a Lua config is a program, which ricepilot does not run; see NOT-POSSIBLE.md#verify-lua-config), and --strict switches only to a Hyprland config that was. drop --strict to switch to it anyway.
