tests/snapshots/strict__strict_goes_ahead_past_volatile_paths_and_identical_rewrites.snap
---
source: tests/strict.rs
expression: drift_and_verdict(&r.stdout)
---
profile drift:
  `new` is what ricepilot recorded at <TS> (<HOME>/.local/state/ricepilot/manifests/new.toml).
  1 further path(s) were rewritten with identical content; that is not drift.
  not compared, because the manifest declares them `volatile`: **/*.log

applying 9 operation(s):
